examples/test/testpolicy3909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3909
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key0: value22
      key38: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value11
          key43: value37
          key21: value12
      podSelector:
        matchLabels:
          key48: value31
          key12: value33
          key37: value29
